Creating separate files for js and css. Made website a bit more consistent

--- a/index.html
+++ b/index.html
@@ -3,203 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="KYNLiV Inc. - Pioneering immunotherapeutic drug discovery for autoimmune diseases and cancer. Precision treatments that preserve immune function.">
     <title>KYNLiV Inc. - Immunotherapeutic Drug Discovery</title>
-    <style>
-        :root {
-            --primary-color: #006699;
-            --secondary-color: #00a86b;
-            --accent-color: #ff6b6b;
-            --text-color: #333333;
-            --background-color: #f5f5f5;
-            --card-bg: #ffffff;
-        }
-        
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--background-color);
-            overflow-x: hidden;
-        }
-
-        .container {
-            width: 80%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            background: var(--primary-color);
-            color: #ffffff;
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            transition: all 0.3s ease-in-out;
-        }
-
-        header.scrolled {
-            padding: 0.5rem 0;
-            background: rgba(0, 102, 153, 0.9);
-        }
-
-        nav ul {
-            display: flex;
-            justify-content: space-around;
-            list-style: none;
-        }
-
-        nav ul li a {
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        nav ul li a:hover {
-            color: var(--accent-color);
-        }
-
-        .hero {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: #ffffff;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .hero::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="2"/></svg>') center/50px 50px;
-            animation: rotate 60s linear infinite;
-        }
-
-        @keyframes rotate {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 1;
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
-            animation: fadeInUp 1s ease-out;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            animation: fadeInUp 1s ease-out 0.5s both;
-        }
-
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .section {
-            padding: 5rem 0;
-            opacity: 0;
-            transform: translateY(20px);
-            transition: opacity 0.5s ease, transform 0.5s ease;
-        }
-
-        .section.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            text-align: center;
-            color: var(--primary-color);
-        }
-
-        .card {
-            background: var(--card-bg);
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin-bottom: 2rem;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .team-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-        }
-
-        .team-member {
-            background: var(--card-bg);
-            padding: 1.5rem;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .team-member:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            background-color: var(--primary-color);
-            color: #ffffff;
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-            }
-
-            .section h2 {
-                font-size: 2rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="header">
@@ -215,27 +23,28 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
+        <section id="home" class="hero parallax">
             <div class="hero-content">
-                <h1>KYNLiV Inc.</h1>
+                <h1 class="float-animation">KYNLiV Inc.</h1>
                 <p>Immunotherapeutic Drug Discovery</p>
                 <p><em>Kindness for Life</em></p>
             </div>
+            <div class="scroll-indicator"></div>
         </section>
 
-        <section id="about" class="section">
+        <section id="about" class="section parallax">
             <div class="container">
                 <h2>Welcome to KYNLiV</h2>
-                <div class="card">
+                <div class="card animate-left">
                     <p>At <strong>KYNLiV</strong>, we are revolutionizing the field of immunotherapy by developing cutting-edge treatments that target <strong>autoimmunity</strong> and <strong>cancer</strong> without compromising the immune system's natural defense mechanisms. Our therapies reprogram disease-associated immune cells to selectively suppress harmful responses, while <strong>preserving overall immune function</strong>. This innovative approach brings hope to millions suffering from immune-related disorders and cancers, offering a <strong>precise and organ-specific treatment</strong> that transforms the medical landscape.</p>
                 </div>
             </div>
         </section>
 
-        <section id="what-we-do" class="section">
+        <section id="what-we-do" class="section parallax">
             <div class="container">
                 <h2>What We Do</h2>
-                <div class="card">
+                <div class="card animate-right">
                     <p>Our focus is to pioneer <strong>immunotherapeutic treatments</strong> that restore balance to the immune system. We are driven by science and innovation, and we strive to develop therapies that:</p>
                     <ul>
                         <li><strong>Target specific autoimmune disorders</strong> and cancers linked to immune dysfunction.</li>
@@ -247,31 +56,31 @@
             </div>
         </section>
 
-        <section id="team" class="section">
+        <section id="team" class="section parallax">
             <div class="container">
                 <h2>Meet Our Team</h2>
                 <div class="team-grid">
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Cini Mathew John, PhD, RPh</h3>
                         <p>Director of Management and Research</p>
                     </div>
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Chinna Keshavsa Umeshappa, PhD</h3>
                         <p>Director of Scientific Discoveries</p>
                     </div>
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Fazlin Fauzi, MPharm, PhD</h3>
                         <p>Chief Scientist, Data and Informatics</p>
                     </div>
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Alice Joshua</h3>
                         <p>Strategic Partnership Advisor</p>
                     </div>
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Hanna Mathew</h3>
                         <p>Technology Officer</p>
                     </div>
-                    <div class="team-member">
+                    <div class="team-member float-animation">
                         <h3>Annette John, MSc</h3>
                         <p>Intern Student</p>
                     </div>
@@ -279,10 +88,10 @@
             </div>
         </section>
 
-        <section id="why" class="section">
+        <section id="why" class="section parallax">
             <div class="container">
                 <h2>Why KYNLiV?</h2>
-                <div class="card">
+                <div class="card animate-left">
                     <p>Autoimmune diseases and cancers present some of the most <strong>complex challenges</strong> in modern medicine, where the immune system mistakenly attacks the body or fails to eliminate harmful cells. While medical advances have been made, there is <strong>no cure</strong> for many autoimmune diseases, and current treatments often rely on suppressing the immune system broadly—leading to severe side effects such as heightened risk of infections and even cancer.</p>
                     <p>At KYNLiV, we recognize the <strong>urgent need for more precise treatments</strong>, and our therapies aim to deliver the precision and effectiveness required to tackle these diseases at their core, <strong>without harmful side effects</strong>.</p>
                 </div>
@@ -292,56 +101,10 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 KYNLiV Inc. All rights reserved.</p>
+            <p>&copy; <span id="current-year"></span> KYNLiV Inc. All rights reserved.</p>
         </div>
     </footer>
 
-    <script>
-        // Smooth scrolling
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Header scroll effect
-        const header = document.getElementById('header');
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > 100) {
-                header.classList.add('scrolled');
-            } else {
-                header.classList.remove('scrolled');
-            }
-        });
-
-        // Lazy loading sections
-        const sections = document.querySelectorAll('.section');
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, { threshold: 0.1 });
-
-        sections.forEach(section => {
-            observer.observe(section);
-        });
-
-        // Animate team members on hover
-        const teamMembers = document.querySelectorAll('.team-member');
-        teamMembers.forEach(member => {
-            member.addEventListener('mouseenter', () => {
-                member.style.transform = 'scale(1.05)';
-                member.style.transition = 'transform 0.3s ease';
-            });
-            member.addEventListener('mouseleave', () => {
-                member.style.transform = 'scale(1)';
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
